--- a/src/index.css
+++ b/src/index.css
@@ -473,7 +473,7 @@ nav ul li a:hover {
   }
 
   .contact-form button {
-	margin-top: 50px;  
+	//margin-top: 50px;  
     width: 100%; /* Full width button */
   }
 
